scss/_carousel-caption-below.scss
// Carosel custom components
/////////////////////////////

// Stating the variables first, note this is also in the global variables;
$carousel-caption-below-height: 175px !default;
$carousel-caption-below-color: $gray-light !default;
$carousel-caption-below-bg: #222 !default;
$carousel-caption-below-border: darken($carousel-caption-below-bg, 10%) !default;
$carousel-caption-offset: 10px !default;
$carousel-caption-offset-top: 30% !default;
$carousel-caption-below-control-padding: 20px !default;
$carousel-caption-below-control-bg: #222222 !default;

// Wrapper class for context and overrides.
.carosel-captions-below {
  // Move the indicators to the top right.
  .carousel-indicators {
    top: $carousel-caption-offset;
    right: $carousel-caption-offset;
    bottom: initial;
    left: auto;
    width: auto;
    @media (min-width: $screen-sm-min) {
      top: ($carousel-caption-offset*2);
      right: ($carousel-caption-offset*2);
    }
  }

  // Adjust the controls for the larger height;
  .carousel-control {
    @include square(25px);
    top: $carousel-caption-offset;
    right: ($carousel-caption-offset*2);
    bottom: auto;
    padding: $carousel-caption-below-control-padding;
    border-radius: 50%;
    border: 2px solid $carousel-indicator-border-color;
    background: $carousel-caption-below-control-bg;
    &.left{
      left: ($carousel-caption-offset*2);
    }
    @media (min-width: $screen-sm-min) {
      @include square(45px);
      top: ($carousel-caption-offset-top + 12%);
      right: $carousel-caption-offset;
      padding: ($carousel-caption-below-control-padding + 10);
      &.left{
        left: $carousel-caption-offset;
      }
    }
  }
}

// Change the caption class to below for the varitation.
// Easier than resetting all the bootstrap classes.
.carousel-caption-below {
  height: $carousel-caption-below-height;
  padding: $padding-small-vertical $padding-small-horizontal;
  // Allow the caption to be longer if needed.
  overflow-y: scroll;
  border: $carousel-caption-below-border;
  color: $carousel-caption-below-color;
  background: $carousel-caption-below-bg;
  font-size: $font-size-small;
  & > * {
    color: inherit;
  }
  @media (min-width: $screen-sm-min) {
    padding: $padding-base-vertical $padding-base-horizontal;
    height: ($carousel-caption-below-height * (75/100));
    font-size: $font-size-base;
  }
}




.carousel-control {
  .fa-chevron-left,
  .fa-chevron-right {
    position: absolute;
    top: $carousel-caption-offset-top;
    z-index: 5;
    display: inline-block;
    @media (min-width: $screen-sm-min) {
      top: ($carousel-caption-offset-top + 12%);
    }
  }
  .fa-chevron-left {
    left: 50%;
    margin-left: -10px;
  }
  .fa-chevron-right {
    right: 50%;
    margin-right: -10px;
  }
}

